# booru-rs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  config.rs  error.rs  lib.rs  prelude.rs
src/routes/: mod.rs  profile.rs
